[package]
name = "synctools"
version = "0.3.1"
authors = ["Yuuki Takano <ytakanoster@gmail.com>"]
edition = "2021"
description = "Synchronization tools for no_std."
repository = "https://github.com/ytakano/synctools/"
keywords = ["no_std", "mutex", "rwlock" ]
categories = [ "no-std", "embedded" ]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/ytakano/synctools/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
